# dante-for-data

./: .gitignore  LICENSE  README.md  pyproject.toml
.dante/knowledge/: notes.yaml
src/dante/: __init__.py  _utils.py  analyze.py  app.py  chart.py  cli.py  config.py  connect.py  mcp_server.py  query.py  scaffold.py
src/dante/ingest/: __init__.py  coming_soon.py  databricks.py  looker.py  mode.py  question_gen.py  redash.py  sigma.py  sql_simplifier.py  superset.py  warehouse.py
src/dante/knowledge/: __init__.py  embeddings.py  glossary.py  keywords.py  notes.py  patterns.py  search.py  vectorize.py
src/dante/tools/: analyze_tools.py  app_tools.py  chart_tools.py  knowledge_tools.py  sql_tools.py
src/dante/ui/: app.html  server.py
tests/: test_chart.py  test_config.py  test_connect.py  test_embeddings.py  test_glossary.py  test_keywords.py  test_patterns.py  test_scaffold.py  test_search.py
